--- a/index.html
+++ b/index.html
@@ -5,50 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hair Techniques</title>
+    <link rel="stylesheet" href="styles.css" />
 
     <!-- leaflet css  -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        #map {
-            width: 100%;
-            height: 100vh;
-        }
-
-        .coordinate {
-            position: absolute;
-            bottom: 10px;
-            right: 50%;
-        }
-
-        .leaflet-popup-content-wrapper {
-            background-color: #000000;
-            color: #fff;
-            border: 1px solid red;
-            border-radius: 0px;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   </head>
   <body>
-    <div id="map">
+    <h1>Mapping Hair Techniques across the African Diaspora</h1>
+    <div class="menu">
+      <button type="button" class="exploremap"> EXPLORE THE MAP</button>
+      <button type="button" class="about"> PROJECT REFLECTION</button>
+      <button type="button" class="learn"> LEARN MORE </button>
+    </div>
+  </div>
+    <div class="container-fluid">
+      <div id="map"></div>
         <div class="leaflet-control coordinate"></div>
+        </div>
+      </div>
     </div>
   </body>
 
 </html>
 
-//leaflet.js install
 
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"  charset="utf-8"></script>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"  charset="utf-8"></script>
+  <script src="./data/map.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
 
   <script>
     // Map initialization
-    var map = L.map('map').setView([28.3949, 84.1240], 8);
+    var map = L.map('map').setView([37.097987, -34.197360], 2);
 
 
 
@@ -88,19 +77,12 @@
     /*==============================================
                 GEOJSON
     ================================================*/
-    var pointData = L.geoJSON(pointJson).addTo(map)
-    var lineData = L.geoJSON(lineJson).addTo(map)
-    var polygonData = L.geoJSON(polygonJson, {
-        onEachFeature: function (feature, layer) {
-            layer.bindPopup(`<b>Name: </b>` + feature.properties.name)
-        },
-        style: {
-            fillColor: 'red',
-            fillOpacity: 1,
-            color: '#c0c0c0',
-        }
-    }).addTo(map);
 
+    var contentData = L.geoJSON(content, {
+        onEachFeature: function (feature, layer) {
+            layer.bindPopup(`<b>Technique: </b>` + feature.properties.title  +' : '+ feature.properties.popupContent)
+        },
+    }).addTo(map);
 
 
     /*==============================================
@@ -112,12 +94,7 @@
         "Google Satellite": googleSat,
     };
     var overlayMaps = {
-        "First Marker": singleMarker,
-        'Second Marker': secondMarker,
-        'Point Data': pointData,
-        'Line Data': lineData,
-        'Polygon Data': polygonData,
-        'wms': wms
+        'Locations': contentData,
     };
     // map.removeLayer(singleMarker)
 
@@ -127,15 +104,6 @@
     /*==============================================
                     LEAFLET EVENTS
     ================================================*/
-    map.on('mouseover', function () {
-        console.log('your mouse is over the map')
-    })
-
-    map.on('mousemove', function (e) {
-        document.getElementsByClassName('coordinate')[0].innerHTML = 'lat: ' + e.latlng.lat + 'lng: ' + e.latlng.lng;
-        console.log('lat: ' + e.latlng.lat, 'lng: ' + e.latlng.lng)
-    })
-
 
     /*==============================================
                     STYLE CUSTOMIZATION
