--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hair Techniques</title>
+    <title>Crafting the Self through Coordinates</title>
     <link rel="stylesheet" href="styles.css" />
 
     <!-- leaflet css  -->
@@ -12,12 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Mapping Hair Techniques across the African Diaspora</h1>
-    <div class="menu">
-      <button type="button" class="exploremap"> EXPLORE THE MAP</button>
-      <button type="button" class="about"> PROJECT REFLECTION</button>
-      <button type="button" class="learn"> LEARN MORE </button>
-    </div>
+    <h1>Unique Locations tracked by Snapchat, September 2018-May 2019</h1>
   </div>
     <div class="container-fluid">
       <div id="map"></div>
