--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     var contentData = L.geoJSON(content, {
         onEachFeature: function (feature, layer) {
-            layer.bindPopup(`<b>Technique: </b>` + feature.properties.title  +' : '+ feature.properties.popupContent)
+            layer.bindPopup(`<b>Location: </b>` + feature.properties.location)
         },
     }).addTo(map);
 
